--- a/src/SourceGit/Views/CreateGroup.axaml
+++ b/src/SourceGit/Views/CreateGroup.axaml
@@ -3,6 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="using:SourceGit.ViewModels"
+             xmlns:v="using:SourceGit.Views"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SourceGit.Views.CreateGroup"
              x:DataType="vm:CreateGroup">
@@ -11,7 +12,7 @@
 
     <Grid Margin="8,16,0,0" Height="28" ColumnDefinitions="Auto,*">
       <TextBlock Grid.Column="0" HorizontalAlignment="Right" Margin="8,0" Text="{DynamicResource Text.Name}"/>
-      <TextBox Grid.Column="1" CornerRadius="3" Text="{Binding Name, Mode=TwoWay}"/>
+      <TextBox Grid.Column="1" CornerRadius="3" v:AutoFocusBehaviour.IsEnabled="True" Text="{Binding Name, Mode=TwoWay}"/>
     </Grid>
   </StackPanel>
 </UserControl>
