--- a/src/SourceGit/Views/CreateBranch.axaml
+++ b/src/SourceGit/Views/CreateBranch.axaml
@@ -4,19 +4,20 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:m="using:SourceGit.Models"
              xmlns:vm="using:SourceGit.ViewModels"
+             xmlns:v="using:SourceGit.Views"
              xmlns:c="using:SourceGit.Converters"
              mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="450"
              x:Class="SourceGit.Views.CreateBranch"
              x:DataType="vm:CreateBranch">
   <StackPanel Orientation="Vertical" Margin="8,0">
     <TextBlock FontSize="18"
-				       Classes="bold"
-				       Text="{DynamicResource Text.CreateBranch}"/>
+               Classes="bold"
+               Text="{DynamicResource Text.CreateBranch}"/>
     <Grid Margin="0,16,0,0" RowDefinitions="32,32,32,32" ColumnDefinitions="150,*">
       <TextBlock Grid.Column="0"
-					       HorizontalAlignment="Right" VerticalAlignment="Center"
-					       Margin="0,0,8,0"
-					       Text="{DynamicResource Text.CreateBranch.BasedOn}"/>
+                 HorizontalAlignment="Right" VerticalAlignment="Center"
+                 Margin="0,0,8,0"
+                 Text="{DynamicResource Text.CreateBranch.BasedOn}"/>
       <ContentControl Grid.Column="1" Content="{Binding BasedOn}">
         <ContentControl.DataTemplates>
           <DataTemplate DataType="m:Branch">
@@ -44,19 +45,20 @@
       </ContentControl>
 
       <TextBlock Grid.Row="1" Grid.Column="0"
-					       HorizontalAlignment="Right" VerticalAlignment="Center"
-					       Margin="0,0,8,0"
-					       Text="{DynamicResource Text.CreateBranch.Name}"/>
+                 HorizontalAlignment="Right" VerticalAlignment="Center"
+                 Margin="0,0,8,0"
+                 Text="{DynamicResource Text.CreateBranch.Name}"/>
       <TextBox Grid.Row="1" Grid.Column="1"
                Height="26"
                VerticalAlignment="Center"
                CornerRadius="2"
-               Text="{Binding Name, Mode=TwoWay}"/>
+               Text="{Binding Name, Mode=TwoWay}"
+               v:AutoFocusBehaviour.IsEnabled="True"/>
 
       <TextBlock Grid.Row="2" Grid.Column="0"
-					       HorizontalAlignment="Right" VerticalAlignment="Center"
-					       Margin="0,0,8,0"
-					       Text="{DynamicResource Text.CreateBranch.LocalChanges}"/>
+                 HorizontalAlignment="Right" VerticalAlignment="Center"
+                 Margin="0,0,8,0"
+                 Text="{DynamicResource Text.CreateBranch.LocalChanges}"/>
       <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal">
         <RadioButton Content="{DynamicResource Text.CreateBranch.LocalChanges.StashAndReply}"
                      GroupName="LocalChanges"
