--- a/src/SourceGit/Views/CreateTag.axaml
+++ b/src/SourceGit/Views/CreateTag.axaml
@@ -4,19 +4,20 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:m="using:SourceGit.Models"
              xmlns:vm="using:SourceGit.ViewModels"
+             xmlns:v="using:SourceGit.Views"
              xmlns:c="using:SourceGit.Converters"
              mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="450"
              x:Class="SourceGit.Views.CreateTag"
              x:DataType="vm:CreateTag">
   <StackPanel Orientation="Vertical" Margin="8,0,0,0">
     <TextBlock FontSize="18"
-				       Classes="bold"
-				       Text="{DynamicResource Text.CreateTag}"/>
+               Classes="bold"
+               Text="{DynamicResource Text.CreateTag}"/>
     <Grid Margin="0,16,8,0" RowDefinitions="32,32,64" ColumnDefinitions="150,*">
       <TextBlock Grid.Column="0"
-					       HorizontalAlignment="Right" VerticalAlignment="Center"
-					       Margin="0,0,8,0"
-					       Text="{DynamicResource Text.CreateTag.BasedOn}"/>
+                 HorizontalAlignment="Right" VerticalAlignment="Center"
+                 Margin="0,0,8,0"
+                 Text="{DynamicResource Text.CreateTag.BasedOn}"/>
       <ContentControl Grid.Column="1" Content="{Binding BasedOn}">
         <ContentControl.DataTemplates>
           <DataTemplate DataType="m:Branch">
@@ -37,19 +38,20 @@
       </ContentControl>
 
       <TextBlock Grid.Row="1" Grid.Column="0"
-					       HorizontalAlignment="Right" VerticalAlignment="Center"
-					       Margin="0,0,8,0"
-					       Text="{DynamicResource Text.CreateTag.Name}"/>
+                 HorizontalAlignment="Right" VerticalAlignment="Center"
+                 Margin="0,0,8,0"
+                 Text="{DynamicResource Text.CreateTag.Name}"/>
       <TextBox Grid.Row="1" Grid.Column="1"
                Height="26"
                VerticalAlignment="Center"
                CornerRadius="2"
-               Text="{Binding TagName, Mode=TwoWay}"/>
+               Text="{Binding TagName, Mode=TwoWay}"
+               v:AutoFocusBehaviour.IsEnabled="True"/>
 
       <TextBlock Grid.Row="2" Grid.Column="0"
-					       HorizontalAlignment="Right" VerticalAlignment="Top"
-					       Margin="0,6,8,0"
-					       Text="{DynamicResource Text.CreateTag.Message}"/>
+                 HorizontalAlignment="Right" VerticalAlignment="Top"
+                 Margin="0,6,8,0"
+                 Text="{DynamicResource Text.CreateTag.Message}"/>
       <TextBox Grid.Row="2" Grid.Column="1"
                Height="56"
                AcceptsReturn="True" AcceptsTab="False"
