--- a/src/SourceGit/Views/EditRemote.axaml
+++ b/src/SourceGit/Views/EditRemote.axaml
@@ -4,31 +4,33 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:m="using:SourceGit.Models"
              xmlns:vm="using:SourceGit.ViewModels"
+             xmlns:v="using:SourceGit.Views"
              xmlns:c="using:SourceGit.Converters"
              mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="450"
              x:Class="SourceGit.Views.EditRemote"
              x:DataType="vm:EditRemote">
   <StackPanel Orientation="Vertical" Margin="8,0">
     <TextBlock FontSize="18"
-				       Classes="bold"
-				       Text="{DynamicResource Text.Remote.AddTitle}"/>
+               Classes="bold"
+               Text="{DynamicResource Text.Remote.AddTitle}"/>
 
     <Grid Margin="0,16,0,0" RowDefinitions="32,32,Auto" ColumnDefinitions="150,*">
       <TextBlock Grid.Row="0" Grid.Column="0"
-					       HorizontalAlignment="Right" VerticalAlignment="Center"
-					       Margin="0,0,8,0"
-					       Text="{DynamicResource Text.Remote.Name}"/>
+                 HorizontalAlignment="Right" VerticalAlignment="Center"
+                 Margin="0,0,8,0"
+                 Text="{DynamicResource Text.Remote.Name}"/>
       <TextBox Grid.Row="0" Grid.Column="1"
                Height="26"
                VerticalAlignment="Center"
                CornerRadius="2"
                Watermark="{DynamicResource Text.Remote.Name.Placeholder}"
-               Text="{Binding Name, Mode=TwoWay}"/>
+               Text="{Binding Name, Mode=TwoWay}"
+               v:AutoFocusBehaviour.IsEnabled="True"/>
 
       <TextBlock Grid.Row="1" Grid.Column="0"
-					       HorizontalAlignment="Right" VerticalAlignment="Center"
-					       Margin="0,0,8,0"
-					       Text="{DynamicResource Text.Remote.URL}"/>
+                 HorizontalAlignment="Right" VerticalAlignment="Center"
+                 Margin="0,0,8,0"
+                 Text="{DynamicResource Text.Remote.URL}"/>
       <TextBox Grid.Row="1" Grid.Column="1"
                Height="26"
                VerticalAlignment="Center"
@@ -37,9 +39,9 @@
                Text="{Binding Url, Mode=TwoWay}"/>
 
       <TextBlock Grid.Row="2" Grid.Column="0"
-					       HorizontalAlignment="Right" VerticalAlignment="Center"
-					       Margin="0,0,8,0"
-					       Text="{DynamicResource Text.SSHKey}"
+                 HorizontalAlignment="Right" VerticalAlignment="Center"
+                 Margin="0,0,8,0"
+                 Text="{DynamicResource Text.SSHKey}"
                  IsVisible="{Binding UseSSH}"/>
       <TextBox Grid.Row="2" Grid.Column="1"
                x:Name="txtSSHKey"
