--- a/src/SourceGit/Views/GitFlowStart.axaml
+++ b/src/SourceGit/Views/GitFlowStart.axaml
@@ -4,34 +4,36 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:m="using:SourceGit.Models"
              xmlns:vm="using:SourceGit.ViewModels"
+             xmlns:v="using:SourceGit.Views"
              xmlns:c="using:SourceGit.Converters"
              mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="450"
              x:Class="SourceGit.Views.GitFlowStart"
              x:DataType="vm:GitFlowStart">
   <StackPanel Orientation="Vertical" Margin="8,0">
     <TextBlock FontSize="18"
-				       Classes="bold"
-				       Text="{DynamicResource Text.GitFlow.StartFeatureTitle}"
+               Classes="bold"
+               Text="{DynamicResource Text.GitFlow.StartFeatureTitle}"
                IsVisible="{Binding IsFeature}"/>
     <TextBlock FontSize="18"
-				       Classes="bold"
-				       Text="{DynamicResource Text.GitFlow.StartReleaseTitle}"
+               Classes="bold"
+               Text="{DynamicResource Text.GitFlow.StartReleaseTitle}"
                IsVisible="{Binding IsRelease}"/>
     <TextBlock FontSize="18"
-				       Classes="bold"
-				       Text="{DynamicResource Text.GitFlow.StartHotfixTitle}"
+               Classes="bold"
+               Text="{DynamicResource Text.GitFlow.StartHotfixTitle}"
                IsVisible="{Binding IsHotfix}"/>
     <Grid Margin="0,16,0,0" ColumnDefinitions="150,*">
       <TextBlock Grid.Column="0"
-					       HorizontalAlignment="Right" VerticalAlignment="Center"
-					       Margin="0,0,8,0"
-					       Text="{Binding Prefix}"/>
+                 HorizontalAlignment="Right" VerticalAlignment="Center"
+                 Margin="0,0,8,0"
+                 Text="{Binding Prefix}"/>
       <TextBox Grid.Column="1"
                Height="26"
                VerticalAlignment="Center"
                CornerRadius="2"
                Watermark="{DynamicResource Text.GitFlow.StartPlaceholder}"
-               Text="{Binding Name, Mode=TwoWay}"/>
+               Text="{Binding Name, Mode=TwoWay}"
+               v:AutoFocusBehaviour.IsEnabled="True"/>
     </Grid>
   </StackPanel>
 </UserControl>
