--- a/src/SourceGit/Views/Reword.axaml
+++ b/src/SourceGit/Views/Reword.axaml
@@ -3,19 +3,20 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="using:SourceGit.ViewModels"
+             xmlns:v="using:SourceGit.Views"
              xmlns:c="using:SourceGit.Converters"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SourceGit.Views.Reword"
              x:DataType="vm:Reword">
   <StackPanel Orientation="Vertical" Margin="8,0">
     <TextBlock FontSize="18"
-				       Classes="bold"
-				       Text="{DynamicResource Text.Reword}"/>
+               Classes="bold"
+               Text="{DynamicResource Text.Reword}"/>
     <Grid Margin="0,16,0,0" RowDefinitions="32,32,32" ColumnDefinitions="100,*">
       <TextBlock Grid.Row="0" Grid.Column="0"
-					       HorizontalAlignment="Right" VerticalAlignment="Center"
-					       Margin="0,0,8,0"
-					       Text="{DynamicResource Text.Reword.On}"/>
+                 HorizontalAlignment="Right" VerticalAlignment="Center"
+                 Margin="0,0,8,0"
+                 Text="{DynamicResource Text.Reword.On}"/>
       <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" Height="20" VerticalAlignment="Center">
         <Path Margin="0,6,8,0" Width="14" Height="14" Fill="{DynamicResource Brush.FG1}" Data="{StaticResource Icons.Commit}"/>
         <TextBlock Text="{Binding Head.SHA, Converter={x:Static c:StringConverters.ToShortSHA}}" Foreground="DarkOrange"/>
@@ -23,14 +24,15 @@
       </StackPanel>
 
       <TextBlock Grid.Row="1" Grid.Column="0"
-					       HorizontalAlignment="Right" VerticalAlignment="Center"
-					       Margin="0,0,8,0"
-					       Text="{DynamicResource Text.Reword.Message}"/>
+                 HorizontalAlignment="Right" VerticalAlignment="Center"
+                 Margin="0,0,8,0"
+                 Text="{DynamicResource Text.Reword.Message}"/>
       <TextBox Grid.Row="1" Grid.RowSpan="2" Grid.Column="1"
                CornerRadius="2"
                AcceptsReturn="True"
                VerticalContentAlignment="Top"
-               Text="{Binding Message, Mode=TwoWay}"/>  
+               Text="{Binding Message, Mode=TwoWay}"
+               v:AutoFocusBehaviour.IsEnabled="True"/>  
     </Grid>
   </StackPanel>
 </UserControl>
