--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -116,12 +116,7 @@
       <!-- Left Normal Mode -->
       <Grid Grid.Column="0" RowDefinitions="28,Auto,28,Auto,28,*,28,Auto,28,Auto" Margin="0,0,0,4" IsVisible="{Binding !IsSearching}">
         <!-- WorkingCopy -->
-        <Grid Grid.Row="0" ColumnDefinitions="*,Auto">
-          <TextBlock Grid.Column="0" Classes="group_header_label" Text="{DynamicResource Text.Repository.Workspace}"/>
-          <Button Grid.Column="1" Classes="icon_button" Width="14" Margin="8,0" Command="{Binding NavigateToCurrentHead}" ToolTip.Tip="{DynamicResource Text.Repository.NavigateToCurrentHead}">
-            <Path Width="14" Height="14" Data="{StaticResource Icons.Target}"/>
-          </Button>
-        </Grid>
+        <TextBlock Grid.Row="0" Classes="group_header_label" Text="{DynamicResource Text.Repository.Workspace}"/>
         <ListBox Grid.Row="1" Classes="page_switcher" Background="Transparent" SelectedIndex="{Binding SelectedViewIndex, Mode=TwoWay}">
           <ListBox.ItemsPanel>
             <ItemsPanelTemplate>
@@ -130,10 +125,13 @@
           </ListBox.ItemsPanel>
 
           <ListBoxItem Height="28" Padding="0">
-            <StackPanel Margin="16,0,0,0" Orientation="Horizontal">
-              <Path Width="14" Height="14" Data="{StaticResource Icons.Histories}"/>
-              <TextBlock Margin="8,0,0,0" Classes="monospace" Text="{DynamicResource Text.Histories}"/>
-            </StackPanel>
+            <Grid Margin="16,0,0,0" Height="28" ColumnDefinitions="Auto,*,Auto">
+              <Path Grid.Column="0" Width="14" Height="14" Data="{StaticResource Icons.Histories}"/>
+              <TextBlock Grid.Column="1" Margin="8,0,0,0" Classes="monospace" Text="{DynamicResource Text.Histories}"/>
+              <Button Grid.Column="2" Classes="icon_button" Width="14" Margin="8,0" Command="{Binding NavigateToCurrentHead}" ToolTip.Tip="{DynamicResource Text.Repository.NavigateToCurrentHead}">
+                <Path Width="14" Height="14" Data="{StaticResource Icons.Target}"/>
+              </Button>
+            </Grid>
           </ListBoxItem>
 
           <ListBoxItem Height="28" Padding="0">
