--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -243,6 +243,37 @@
     <Setter Property="Opacity" Value="1"/>
   </Style>
 
+  <Style Selector="SplitButton.icon_button">
+    <Setter Property="BorderThickness" Value="0"/>
+    <Setter Property="Background" Value="Transparent"/>
+    <Setter Property="VerticalAlignment" Value="Center"/>
+    <Setter Property="Padding" Value="4,0,0,0" />
+    <Setter Property="MinHeight" Value="26" />
+    <Style.Resources>
+      <x:Double x:Key="SplitButtonPrimaryButtonSize">24</x:Double>
+      <x:Double x:Key="SplitButtonSecondaryButtonSize">40</x:Double>
+      <x:Double x:Key="SplitButtonSeparatorWidth">0</x:Double>
+      <SolidColorBrush x:Key="SplitButtonBackgroundPressed" Color="Transparent" />
+    </Style.Resources>
+  </Style>
+  <Style Selector="SplitButton.icon_button /template/ Button#PART_SecondaryButton">
+    <Setter Property="Margin" Value="-24,0,0,0"/>
+    <Setter Property="Padding" Value="24,0,4,0"/>
+    <Setter Property="ZIndex" Value="-1"/>
+    <Setter Property="CornerRadius" Value="{DynamicResource ControlCornerRadius}"/>
+  </Style>
+  <Style Selector="SplitButton.icon_button /template/ PathIcon">
+    <Setter Property="Width" Value="8"/>
+    <Setter Property="Height" Value="8"/>
+  </Style>
+  <Style Selector="SplitButton.icon_button /template/ Button#PART_PrimaryButton /template/ ContentPresenter#PART_ContentPresenter">
+    <Setter Property="Background" Value="Transparent"/>
+    <Setter Property="Opacity" Value="0.8"/>
+  </Style>
+  <Style Selector="SplitButton.icon_button:pointerover /template/ Button#PART_PrimaryButton /template/ ContentPresenter#PART_ContentPresenter">
+    <Setter Property="Opacity" Value="1"/>
+  </Style>
+
   <Style Selector="Button.flat">
     <Setter Property="BorderThickness" Value="0"/>
     <Setter Property="FontWeight" Value="Bold"/>
