--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -9,6 +9,18 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SourceGit.Views.Repository"
              x:DataType="vm:Repository">
+  
+  <UserControl.Resources>
+    <MenuFlyout x:Key="TerminalShellsMenuFlyout" Placement="Bottom">
+      <MenuItem Header="git bash" />
+      <MenuItem Header="PowerShell" />
+    </MenuFlyout>
+    <MenuFlyout x:Key="ExternalToolsMenuFlyout" Placement="Bottom">
+      <MenuItem Header="Visual Studio Code" />
+      <MenuItem Header="Sublime Text" />
+    </MenuFlyout>
+  </UserControl.Resources>
+  
   <Grid RowDefinitions="36,*" Background="{DynamicResource Brush.Window}">
     <!-- Toolbar -->
     <Border Grid.Row="0" BorderBrush="{DynamicResource Brush.Border0}" BorderThickness="0,0,0,1" Background="{DynamicResource Brush.ToolBar}">
@@ -18,13 +30,17 @@
             <Path Width="15" Height="13" Data="{StaticResource Icons.Folder.Open}" Margin="0,1,0,0"/>
           </Button>
           
-          <Button Classes="icon_button" Width="32" Command="{Binding OpenInTerminal}" ToolTip.Tip="{DynamicResource Text.Repository.Terminal}">
+          <SplitButton Classes="icon_button" Command="{Binding OpenInTerminal}"
+                       Flyout="{StaticResource TerminalShellsMenuFlyout}"
+                       ToolTip.Tip="{DynamicResource Text.Repository.Terminal}">
             <Path Width="13" Height="13" Data="{StaticResource Icons.Terminal}"/>
-          </Button>
-
-          <Button Classes="icon_button" Width="32" Click="OnOpenWithExternalEditor" ToolTip.Tip="{DynamicResource Text.Repository.OpenWithExternalTools}">
+          </SplitButton>
+          
+          <SplitButton Classes="icon_button" Click="OnOpenWithExternalEditor"
+                       Flyout="{StaticResource ExternalToolsMenuFlyout}"
+                       ToolTip.Tip="{DynamicResource Text.Repository.OpenWithExternalTools}">
             <Path Width="13" Height="13" Data="{StaticResource Icons.OpenWith}"/>
-          </Button>
+          </SplitButton>
           
           <ToggleButton Width="32"
                         Background="Transparent"
